--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.9.7"
   }
 }
