--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "mysql2": "^3.9.7"
+    "express": "^4.19.2"
   }
 }
